2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZQueen.cxx:
	Change order of lens disentanglement in put_lens_to_purgatory() -
	first remove references to lens and later references from the lens
	that is being redeemed.

	* Rnr/GL/WGlValuator_GL_Rnr.cxx:
	Always check if link to alpha lens is set.

	* Rnr/GL/ZGlass_GL_Rnr.h:
	Add defines for obtaining values of links that can be potentially
	zero.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* RnrBase/PMSEntry.cxx:
	* RnrBase/PMSEntry.h:
	Add some docs. White-space.

2009-12-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Fix handling of leave/enter events. In particular, X sends fake
	events on button press as grabbing is on. Needed to access
	directly the X event to detect that (properly if-defed).
	Set  Fl_Event::fIsOverlay when doing overlay handling.
	Remove unused member mBelowMouseImg.

	* RnrBase/A_Rnr.h:
	Add member fIsOverlay to struct Fl_Event.

2009-12-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlPerspective.cxx:
	In ortho modes use 0, 1 for near, far (instead of -1, 1).

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add zmin/max output args to PickTopNameStack().

	* RnrBase/A_Rnr.h:
	Add fZMin/Max members to struct Fl_Event.

2009-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix stereo rendering for all camera orientations.

	* Glasses/PupilInfo.cxx:
	Put zero-parallax plane at near clipping distance by default.

	* Pupils/Pupil.cxx:
	Properly displace camera by left/right vector from absolute camera
	transformation.

2009-12-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for stereo rendering.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add members for controlling stereo rendering:

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add new function rnr_stereo().
	Slightly modify rnr_standard() so that fake-overlay gets
	rendered within it.
	Add members for frustum limits needed for setting of left/right